--- a/Proposal/thesis_paper_new/document.bib
+++ b/Proposal/thesis_paper_new/document.bib
@@ -170,17 +170,6 @@ pages = {331-339}
   publisher={Elsevier}
 }
 
-@article{cortes1995support,
-  title={Support-vector networks},
-  author={Cortes, Corinna and Vapnik, Vladimir},
-  journal={Machine learning},
-  volume={20},
-  number={3},
-  pages={273--297},
-  year={1995},
-  publisher={Springer}
-}
-
 @article{plotkin1970note,
   title={A note on inductive generalization},
   author={Plotkin, Gordon D},
@@ -470,16 +459,6 @@ pages = {331-339}
   year={2012}
 }
 
-@article{lecun1998gradient,
-  title={Gradient-based learning applied to document recognition},
-  author={LeCun, Yann and Bottou, L{\'e}on and Bengio, Yoshua and Haffner, Patrick},
-  journal={Proceedings of the IEEE},
-  volume={86},
-  number={11},
-  pages={2278--2324},
-  year={1998},
-  publisher={IEEE}
-}
 
 @article{bengio2009learning,
   title={Learning deep architectures for {AI}},
@@ -572,18 +551,6 @@ pages = {331-339}
   organization={ACM}
 }
 
-@book{breiman1984classification,
-  title={Classification and regression trees},
-  author    = {Leo Breiman and
-               J. H. Friedman and
-               R. A. Olshen and
-               C. J. Stone},
-  title     = {Classification and Regression Trees},
-  publisher = {Wadsworth},
-  year      = {1984},
-  isbn      = {0-534-98053-8},
-}
-
 @techreport{fix1951discriminatory,
 	title={Discriminatory analysis-nonparametric discrimination: consistency properties},
 	author={Fix, Evelyn and Hodges Jr, Joseph L},
@@ -646,10 +613,15 @@ pages = {331-339}
 }
 
 @book{breiman1984classification,
-	title={Classification and regression trees},
-	author={Breiman, Leo and Friedman, Jerome and Stone, Charles J and Olshen, Richard A},
-	year={1984},
-	publisher={CRC press}
+  title={Classification and regression trees},
+  author    = {Leo Breiman and
+               Jerome H. Friedman and
+               Richard A. Olshen and
+               Charles J. Stone},
+  title     = {Classification and Regression Trees},
+  publisher = {Wadsworth},
+  year      = {1984},
+  isbn      = {0-534-98053-8},
 }
 
 @inproceedings{finkel2005incorporatingfull,
@@ -748,14 +720,6 @@ pages = {331-339}
   booktitle={Proceedings of the 12th National Conference on Artificial Intelligence},
   pages={639--644},
   year={1994}
-}
-
-@inproceedings{sutton1991learning,
-  title={Learning Polynomial Functions by Feature Construction.},
-  author={Sutton, Richard S and Matheus, Christopher J},
-  booktitle={ML},
-  pages={208--212},
-  year={1991}
 }
 
 @article{raghavan2004exploration,
