--- a/Proposal/thesis_paper_new/document.bib
+++ b/Proposal/thesis_paper_new/document.bib
@@ -849,3 +849,12 @@ pages = {331-339}
   year={2016},
   organization={IEEE}
 }
+
+@inproceedings{moschitti2004complex,
+  title={Complex linguistic features for text classification: A comprehensive study},
+  author={Moschitti, Alessandro and Basili, Roberto},
+  booktitle={European Conference on Information Retrieval},
+  pages={181--196},
+  year={2004},
+  organization={Springer}
+}
